--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -100,13 +100,7 @@ border: 2px solid #FF00FF;
 
 }
 
-box {
-  width: 50px;
-  height: 50px;
-  border: 15px solid green;
-  padding: 50px;
-  margin: -20px;
-}
+
 
 
 </style>
@@ -1208,7 +1202,7 @@ var display = (async function(){
 	var newDiv = document.createElement('div');
 	newDiv.id = 'ss'+i;
 	chat.appendChild(newDiv);
-	document.getElementById("ss" + i).outerHTML = '<p style="color:grey; font-family: helvetica narrow, sans-serif; font-size:150px position:absolute; top:0; right:200;">&#10553;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#10552;</p>'
+	document.getElementById("ss" + i).outerHTML = '<p style="color:grey; font-family: helvetica narrow, sans-serif; font-size: large; position:absolute; top:0; right:200;">&#10553;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;;&nbsp;&nbsp;&nbsp;&#10552;</p>'
 	var ewDiv = document.createElement('table');
 	
 	chat.appendChild(ewDiv);
