--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -77,7 +77,7 @@ table {
 border-radius: 25px;
 width: 400px;
 height: 100px;
-border: 2px solid #FF00FF;
+border: 2px solid #5F6C6D;
 
 }
 
@@ -85,7 +85,7 @@ img {
 
 width: 50px;
 height: 50px;
-border: 2px solid #FF00FF;
+border: 2px solid #5F6C6D;
 
 }
 
@@ -96,7 +96,7 @@ input {
 font-size: x-large;
 right:0;
 color:#FF00FF;
-border: 2px solid #FF00FF;
+border: 2px solid #5F6C6D;
 
 }
 
