--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -77,7 +77,7 @@ table {
 border-radius: 25px;
 width: 400px;
 height: 100px;
-border: 2px solid #FF00FF;
+border: 2px solid #5F6C6D;
 
 }
 
@@ -85,7 +85,7 @@ img {
 
 width: 50px;
 height: 50px;
-border: 2px solid #FF00FF;
+border: 2px solid #5F6C6D;
 
 }
 
@@ -96,17 +96,17 @@ input {
 font-size: x-large;
 right:0;
 color:#FF00FF;
-border: 2px solid #FF00FF;
+border: 2px solid #5F6C6D;
 
 }
 
-box {
-  width: 50px;
-  height: 50px;
-  border: 15px solid green;
-  padding: 50px;
-  margin: -20px;
+p {
+
+color:#5F6C6D; 
+font-family: helvetica narrow;
+
 }
+
 
 
 </style>
@@ -1208,7 +1208,7 @@ var display = (async function(){
 	var newDiv = document.createElement('div');
 	newDiv.id = 'ss'+i;
 	chat.appendChild(newDiv);
-	document.getElementById("ss" + i).outerHTML = '<p style="color:grey; font-family: helvetica narrow, sans-serif; font-size:50px position:absolute; top:0; right:200;">&#10552;</p>'
+	document.getElementById("ss" + i).outerHTML = '<center style="color:grey; font-family: helvetica narrow, font-size: x-large;">&#8645;</center>'
 	var ewDiv = document.createElement('table');
 	
 	chat.appendChild(ewDiv);
