--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -100,6 +100,20 @@ border: 2px solid #5F6C6D;
 
 }
 
+p {
+
+color:#5F6C6D; 
+font-family: helvetica narrow;
+
+}
+
+center {
+
+color:grey; 
+font-family: helvetica narrow; 
+font-size: large;
+}
+
 
 
 
@@ -1202,7 +1216,7 @@ var display = (async function(){
 	var newDiv = document.createElement('div');
 	newDiv.id = 'ss'+i;
 	chat.appendChild(newDiv);
-	document.getElementById("ss" + i).outerHTML = '<center style="color:grey; font-family: helvetica narrow, font-size: large; right:200;">&#8645;</center>'
+	document.getElementById("ss" + i).outerHTML = '<center ">&#8645;</center>'
 	var ewDiv = document.createElement('table');
 	
 	chat.appendChild(ewDiv);
