--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1216,7 +1216,7 @@ var display = (async function(){
 	var newDiv = document.createElement('div');
 	newDiv.id = 'ss'+i;
 	chat.appendChild(newDiv);
-	document.getElementById("ss" + i).outerHTML = '<center ">&#8645;</center>'
+	document.getElementById("ss" + i).outerHTML = '<center>&#8645;</center>'
 	var ewDiv = document.createElement('table');
 	
 	chat.appendChild(ewDiv);
