--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -54,9 +54,11 @@ border: 2px solid #5F6C6D;
 
 input {
 
-font-size: x-large;
+font-size: large;
 right:0;
-color:#FF00FF;
+position: absolute;
+left: 50%;
+color:#5F6C6D;
 border: 2px solid #5F6C6D;
 
 }
@@ -1233,7 +1235,7 @@ var display = (async function(){
 	//newBtn.setAttribute('onclick', 'to_approve(' + "'" + contract_ID2 + "'" + ","  + "'" + address + "'" + "," + tokenID2 + "," + _i + ')');
 	newBtn.setAttribute('onclick', 'to_approve(' + "[" + array_contract_ID2 + "]" + ","  + "'" + address + "'" + ", [" + array_tokenID2 + "]," + _i + ')');
 	console.log('make_trade(' + "'" + contract_ID2 + "'" + ","  + "'" + address + "'" + "," + tokenID2 + ')')
-	newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:10; left:50%;";
+	//newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute;left:50%;";
 	
 	newBtn.id = 'a' + i;
 	
