--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -19,52 +19,13 @@ margin-left: 0.5em;
 cursor: pointer;
 }
 
-#results {
-background: #dddada;
-color: 000000;
-padding: 3px;
-text-align: center;
-width: 200px;
-cursor: pointer;
-border: 1px solid gray;
-}
 
-#results:hover {
-background: #3d91b8;
-color: #ffffff;
-padding: 3px;
-text-align: center;
-width: 200px;
-cursor: pointer;
-border: 1px solid gray;
-}
 
-#categorylist {
-margin-top: 6px;
-display: none;
-}
 
-#category219w1, #category219w2, #category219w3, #category219w4, #category219w5, #category219w6, #category219w7, #category219w8, #category219w9, #category219w10, #category219w11, #category219w12, #category219w13, #category219w14, #category219w15, #category219w16, #category219w17, #category219w18, #category219w19, #category219w20, #category219w21, #category219w22, #category219w23, #category219w24, #category219w25, #category219w26, #category219w27, #category219w28, #category219w29, #category219w30, #category219w31, #category219w32, #category219w33, #category219w34, #category219w35, #category219w36, #category219w37, #category219w38, #category219w39, #category219w40, #category219w41, #category219w42, #category219w43, #category219w44, #category219w45, #category219w46, #category219w47, #category219w48, #category219w49, #category219w50, #category219w51, #category219w52, #category219w53, #category219w54, #category219w55, #category219w56, #category219w57, #category219w58, #category219w59, #category219w60, #category219w61, #category219w62, #category219w63, #category219w64, #category219w65, #category219w66, #category219w67, #category219w68, #category219w69, #category219w70, #category219w71, #category219w72, #category219w73, #category219w74, #category219w75, #category219w76, #category219w77, #category219w78, #category219w79, #category219w80, #category1Z81, #category121w82, #category1Z83, #category1Z84, #category1Z85, #category2Z1, #category2Z2, #category2Z3, #category2Z4, #category2Z5, #category2Z6, #category2Z7, #category2Z8, #category2Z9, #category2Z10, #category2Z11, #category2Z12, #category2Z13, #category2Z14, #category2Z15, #category2Z16, #category2Z17, #category2Z18, #category2Z19, #category2Z20, #category2Z21, #category2Z22, #category2Z23, #category2Z24, #category2Z25, #category2Z26, #category2Z27, #category2Z28, #category2Z29, #category2Z30, #category2Z31, #category2Z32, #category2Z33, #category2Z34, #category2Z35, #category2Z36, #category2Z37, #category2Z38, #category2Z39, #category2Z40, #category2Z41, #category2Z42, #category2Z43, #category2Z44, #category2Z45, #category2Z46, #category2Z47, #category2Z48, #category2Z49, #category2Z50, #category2Z51, #category2Z52,
-#category2Z53, #category2Z54, #category2Z55, #category2Z56, #category2Z57, #category2Z58, #category2Z59, #category2Z60, #category2Z61, #category2Z62, #category2Z63, #category2Z64, #category2Z65, #category2Z66, #category2Z66, #category2Z67, #category2Z68, #category2Z69, #category2Z70, #category2Z71, #category2Z72, #category2Z73, #category2Z74, #category2Z75, #category2Z76, #category2Z77, #category2Z78, #category2Z79, #category2Z80, #category3Z2, #category3Z3, #category3Z4, #category3Z5, #category3Z6, #category3Z7, #category3Z8, #category3Z9, #category3Z10, #category3Z11, #category3Z12, #category3Z13, #category3Z14, #category3Z15, #category3Z16, #category3Z17, #category3Z18, #category3Z19, #category3Z20, #category3Z21, #category3Z22, #category3Z23, #category3Z24, #category3Z25, #category3Z26, #category3Z27, #category3Z28, #category3Z29, #category3Z30, #category3Z31, #category3Z32, #category3Z33, #category3Z34, #category3Z35, #category3Z36, #category3Z37, #category3Z38, #category3Z39, #category3Z40, #category3Z41, #category3Z42, #category3Z43, #category3Z44, #category3Z45, #category3Z46, #category3Z47, #category3Z48, #category3Z49, #category3Z50, #category3Z51, #category3Z52, #category3Z53, #category3Z54, #category3Z55, #category3Z56, #category3Z57, #category3Z58, #category3Z59, #category3Z60, #category3Z61, #category3Z62, #category3Z63, #category3Z64, #category3Z65, #category3Z66, #category3Z67, #category3Z68, #category3Z69, #category3Z70, #category3Z71, #category3Z72, #category3Z73, #category3Z74, #category3Z75, #category3Z76, #category3Z77, #category3Z78, #category3Z79, #category3Z80, #category2Z82 {
-display: none;
-}
 
-#closing {
-display: none;
-#font-style: italic;
-}  
 
-#answers{
-    border:3px solid magenta;
-    width:249px;
-    float:left;
-   
-    padding:0 20px 0;
-}
 
-#answers[type="radio"]{
-    float: left;
-}
+
 
 #div1 {
   width: 350px;
@@ -75,7 +36,7 @@ display: none;
 
 table {
 border-radius: 25px;
-width: 400px;
+width: 500px;
 height: 100px;
 border: 2px solid #5F6C6D;
 
@@ -93,19 +54,29 @@ border: 2px solid #5F6C6D;
 
 input {
 
-font-size: x-large;
+font-size: large;
 right:0;
-color:#FF00FF;
+position: absolute;
+left: 50%;
+color:#5F6C6D;
 border: 2px solid #5F6C6D;
 
 }
 
-p {
+newDiv {
 
 color:#5F6C6D; 
 font-family: helvetica narrow;
 
 }
+
+center {
+
+color:grey; 
+font-family: helvetica narrow; 
+font-size: large;
+}
+
 
 
 
@@ -114,9 +85,9 @@ font-family: helvetica narrow;
 
 
 <body>
-<h2 style="color:#FF00FF; font-family: helvetica narrow, sans-serif; position:absolute; top:0; left:0;">barterNFT</h2>
+<h3 style="color:#FF00FF; font-family: helvetica narrow, sans-serif; position:absolute; top:0; left:0;">barterNFT</h3>
 <button style="color:#FF00FF; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()"">offer trade</button>
-<p id="contract_address_ID" style="color:#FF00FF; font-family: helvetica narrow; position:absolute; top:35; right:400;"></p>
+<p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif; font-size: large; position:absolute; top:35; right:400;"></p>
 
 	
 </div>
@@ -128,36 +99,7 @@ font-family: helvetica narrow;
 
 
 <script>
-//If problems with form insert back up in body
-<!-- <p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:35; left:0;"></p>		 -->
-<!-- <p id="contract_token_id" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:55; left:0;"></p> -->
-<!-- <p id="contract_loan" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:75; left:0;"></p> -->
-<!-- <p id="contract_term" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:95; left:0;"></p> -->
-<!-- <p id="loan_obligation" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:115; left:0;"></p> -->
-<!-- <p id="latest_block" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:135; left:0;"></p> -->
 
-<!-- <div id=category121w83>		 -->
-<!-- <input type="button" value="Lend" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:90; left:0;" onClick="create_obligation()"/> -->
-<!-- <input type="button" value="transfer to lender" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:135; left:0;" onClick="transfer_to_lender()"/> -->
-
-<!-- <input type="text" id="password" name="password" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:90; left:65;">	 -->
-
-<!-- <input type="text" id="NFT_contract" name="NFT_contract" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:50; right:35;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:50; right:30;">contract token ID</label>	 -->
-<!-- <input type="text" id="NFT_Token_ID" name="NFT_Token_ID" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:75; right:35;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:75; right:30;">contract token ID</label>		 -->
-<!-- <input type="text" id="loan_amount" name="loan_amount" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:100; right:35;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:100; right:30;">Loan Amount</label> -->
-<!-- <input type="text" id="loan_term" name="loan_term" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:125; right:35;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:125; right:30;">Loan Term</label> -->
-
-<!-- <input type="button" value="approve" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:160; right:15;" onClick="to_approve()"/>	 -->
-<!-- <input type="button" value="loan request" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:190; right:15;" onClick="loan_request()"/> -->
-<!-- <input type="button" value="reclaim asset" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:220; right:15;" onClick="reclaim_asset()"/>	 -->
-
-<!-- </div> -->
-<!-- <div id=category121w82>	 -->
-<!-- <input type="button" value="Show Answers" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="prompt_approve()"/>	 -->
-<!-- </div> -->
-<!-- <div id="content"></div> -->
-
-//var pwd = document.getElementById("password").value;
 
 function open_window() {
   var myWindow = window.open("create_nft_swap_form_polygonx_live.html", "offer trade", "width=700,height=800");
@@ -1098,10 +1040,10 @@ var display = (async function(){
 	var chat = document.getElementById("contract_address_ID"); // finds the container
 	//var chat = document.createElement("box");
 	
-	//var newDiv = document.createElement('div');
-	//newDiv.id = 'q'+i;
-	//chat.appendChild(newDiv);
-	//document.getElementById("q" + i).innerHTML = '<center style="color:grey; font-family: helvetica narrow, sans-serif; font-size:20px;">&#8645;</center>' + " offer no: " + i //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
+	var newDiv = document.createElement('div');
+	newDiv.id = 'q'+i;
+	chat.appendChild(newDiv);
+	document.getElementById("q" + i).innerHTML = &#10; + " offer no: " + i //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
 	
 	var ewDiv = document.createElement('table');
 	//ewDiv.id = 'r'+i;
@@ -1208,7 +1150,7 @@ var display = (async function(){
 	var newDiv = document.createElement('div');
 	newDiv.id = 'ss'+i;
 	chat.appendChild(newDiv);
-	document.getElementById("ss" + i).outerHTML = '<center style="color:grey; font-family: helvetica narrow, font-size: x-large;">&#8645;</center>'
+	document.getElementById("ss" + i).outerHTML = '<center> trade &#8645; trade</center>'
 	var ewDiv = document.createElement('table');
 	
 	chat.appendChild(ewDiv);
@@ -1216,36 +1158,24 @@ var display = (async function(){
 	
 	var contract_ID2 = await contract_bal.methods.token_contracts_list2xy(i, address, j).call();
 	array_contract_ID2.push("'" + contract_ID2 + "'");
-	//document.getElementById("contract_loan").innerHTML = loan_;	
-	//console.log(loan_)
 	
+	
+	var name2 = await new web3.eth.Contract(abi, contract_ID2).methods.name().call();
+	console.log(name2)
 	
 	var newDiv = document.createElement('div');
-	//var newBtn = document.createElement('input');
-	//newBtn.setAttribute('type', 'button');
-	//newBtn.value = "lend";
-	//newBtn.setAttribute('onclick', 'create_obligation(' + "'" + address + "'" +')');
-	//newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;";
 	
-	//newBtn.id = 'b' + i;
+	
+	
 	newDiv.id = 't'+i + j;
 	ewDiv.appendChild(newDiv);
 	//chat.appendChild(newBtn);
 	
 	
-	document.getElementById("t" + i + j).innerHTML = "NFT Contract 2: " + contract_ID2;
+	document.getElementById("t" + i + j).innerHTML = name2 // "NFT Contract 2: " + contract_ID2;
 	
 	
-	//<input type="button" value="Lend" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;" onClick="create_obligation()"/>
 	
-	//var term = await contract_bal.methods.loan_term_list(address).call();
-	//document.getElementById("contract_term").innerHTML = term;
-	//console.log(term)
-	//var newDiv = document.createElement('div');
-	//newDiv.id = 'u'+i;
-	//chat.appendChild(newDiv);
-	
-	//document.getElementById("u" + i).innerHTML = "loan due at block " + term;
 	
 	var tokenID2 = await contract_bal.methods.tokens_list2xy(i, address, j).call();
 	array_tokenID2.push(tokenID2);
@@ -1278,11 +1208,7 @@ var display = (async function(){
 			}
             img.src = image_
             ewDiv.appendChild(img);
-			//chat.setAttribute('width', '15%');
-			//chat.setAttribute('height', '15%');
-	//document.getElementById("vs" + i).src = JSONresult.image;
-	//document.getElementById("vs" + i).setAttribute('width', '15%');
-	//document.getElementById("vs" + i).setAttribute('height', '15%');
+			
 	}
 	
 	
@@ -1290,7 +1216,7 @@ var display = (async function(){
 	
 	
 	
-	document.getElementById("v" + i + j).innerHTML = "NFT Token ID2: " + tokenID2;
+	document.getElementById("v" + i + j).innerHTML = "" //"NFT Token ID2: " + tokenID2;
 	//var lender = await contract_bal.methods.lender_list(address).call();
 	//console.log(lender)
 	}
@@ -1309,7 +1235,7 @@ var display = (async function(){
 	//newBtn.setAttribute('onclick', 'to_approve(' + "'" + contract_ID2 + "'" + ","  + "'" + address + "'" + "," + tokenID2 + "," + _i + ')');
 	newBtn.setAttribute('onclick', 'to_approve(' + "[" + array_contract_ID2 + "]" + ","  + "'" + address + "'" + ", [" + array_tokenID2 + "]," + _i + ')');
 	console.log('make_trade(' + "'" + contract_ID2 + "'" + ","  + "'" + address + "'" + "," + tokenID2 + ')')
-	//newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;";
+	//newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute;left:50%;";
 	
 	newBtn.id = 'a' + i;
 	
