--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1040,17 +1040,17 @@ var display = (async function(){
 	var chat = document.getElementById("contract_address_ID"); // finds the container
 	//var chat = document.createElement("box");
 	
-	var newDiv = document.createElement('div');
-	newDiv.id = 'q'+i;
-	chat.appendChild(newDiv);
-	document.getElementById("q" + i).innerHTML = '&#10;' + " offer no: " + i //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
+	 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
 	
 	var ewDiv = document.createElement('table');
 	//ewDiv.id = 'r'+i;
 	
 	chat.appendChild(ewDiv);
 	//document.getElementById("r" + i).innerHTML = "" //"account address: " + address;
-	
+	var newDiv = document.createElement('div');
+	newDiv.id = 'q'+i;
+	ewDiv.appendChild(newDiv);
+	document.getElementById("q" + i).innerHTML = '&#10;' + " offer no: " + i
 	
 	var contract_length = await contract_bal.methods.token_contracts_list1xyCount(i, address).call();
 	for (j=0;j<contract_length;j++){
