--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1240,7 +1240,7 @@ var display = (async function(){
 	newBtn.id = 'a' + i;
 	
 	
-	chat.appendChild(newBtn);
+	ewDiv.appendChild(newBtn);
 	}
 	
 	
