--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1155,7 +1155,7 @@ var display = (async function(){
 	document.getElementById("ss" + i).outerHTML = '<center> trade &#8645; trade</center>'
 	var ew1Div = document.createElement('table');
 	
-	chat.appendChild(ewDiv);
+	ewDiv.appendChild(ew1Div);
 	for (j=0;j<contract_length1;j++){ 
 	
 	var contract_ID2 = await contract_bal.methods.token_contracts_list2xy(i, address, j).call();
