--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1151,7 +1151,7 @@ var display = (async function(){
 	
 	var newDiv = document.createElement('div');
 	newDiv.id = 'ss'+i;
-	chat.appendChild(newDiv);
+	ewDiv.appendChild(newDiv);
 	document.getElementById("ss" + i).outerHTML = '<center> trade &#8645; trade</center>'
 	var ew1Div = document.createElement('table');
 	
