--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -85,8 +85,8 @@ font-size: large;
 
 
 <body>
-<h3 style="color:#FF00FF; font-family: helvetica narrow, sans-serif; position:absolute; top:0; left:0;">barterNFT</h3>
-<button style="color:#FF00FF; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()"">offer trade</button>
+<h1 style="color:#ba55d3; font-family: helvetica narrow, sans-serif; position:absolute; top:0; left:0;">barterNFT</h1>
+<button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()"">offer trade</button>
 <p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif; font-size: large; position:absolute; top:35; right:400;"></p>
 
 	
@@ -1052,8 +1052,8 @@ var display = (async function(){
 	var newDiv = document.createElement('div');
 	newDiv.id = 'q'+i;
 	ew1Div.appendChild(newDiv);
-	document.getElementById("q" + i).innerHTML = " offer no: " + i
-	
+	document.getElementById("q" + i).innerHTML = "  OFFER NO: " + i
+	document.getElementById("q" + i).style =
 	var contract_length = await contract_bal.methods.token_contracts_list1xyCount(i, address).call();
 	for (j=0;j<contract_length;j++){
 	var contract_ID1 = await contract_bal.methods.token_contracts_list1xy(i, address, j).call();
@@ -1223,6 +1223,15 @@ var display = (async function(){
 	//console.log(lender)
 	}
 	
+	var latest = await contract_bal.methods.debt_obligation_listx(i, address).call();
+	var newDiv = document.createElement('div');
+	newDiv.id = 'w'+i;
+	ew1Div.appendChild(newDiv);
+	
+	document.getElementById("w" + i).innerHTML = "swap completed: " + latest;
+	//document.getElementById("latest_block").innerHTML = latest;
+	console.log(latest)
+	
 	var _i = (i)
 	var newBtn = document.createElement('input');
 	newBtn.setAttribute('type', 'button');
@@ -1237,14 +1246,7 @@ var display = (async function(){
 	
 	ew1Div.appendChild(newBtn);
 	
-	var latest = await contract_bal.methods.debt_obligation_listx(i, address).call();
-	var newDiv = document.createElement('div');
-	newDiv.id = 'w'+i;
-	ew1Div.appendChild(newDiv);
 	
-	document.getElementById("w" + i).innerHTML = "swap completed: " + latest;
-	//document.getElementById("latest_block").innerHTML = latest;
-	console.log(latest)
 	}
 	
 	
