--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -85,8 +85,8 @@ font-size: large;
 
 
 <body>
-<h3 style="color:#FF00FF; font-family: helvetica narrow, sans-serif; position:absolute; top:0; left:0;">barterNFT</h3>
-<button style="color:#FF00FF; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()"">offer trade</button>
+<h1 style="color:#ba55d3; font-family: helvetica narrow, sans-serif; position:absolute; top:0; left:0;">barterNFT</h1>
+<button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()"">offer trade</button>
 <p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif; font-size: large; position:absolute; top:35; right:400;"></p>
 
 	
@@ -1046,12 +1046,14 @@ var display = (async function(){
 	//ewDiv.id = 'r'+i;
 	
 	chat.appendChild(ewDiv);
+	var ew1Div = document.createElement('table');
+	ewDiv.appendChild(ew1Div);
 	//document.getElementById("r" + i).innerHTML = "" //"account address: " + address;
 	var newDiv = document.createElement('div');
 	newDiv.id = 'q'+i;
-	ewDiv.appendChild(newDiv);
-	document.getElementById("q" + i).innerHTML = '&#10;' + " offer no: " + i
-	
+	ew1Div.appendChild(newDiv);
+	document.getElementById("q" + i).innerHTML = "  OFFER NO: " + i
+	document.getElementById("q" + i).style =
 	var contract_length = await contract_bal.methods.token_contracts_list1xyCount(i, address).call();
 	for (j=0;j<contract_length;j++){
 	var contract_ID1 = await contract_bal.methods.token_contracts_list1xy(i, address, j).call();
@@ -1104,7 +1106,7 @@ var display = (async function(){
 			 image_ = 'https://ipfs.io/ipfs/' + JSONresult.image.slice(7)
 			}
             img.src = image_
-            ewDiv.appendChild(img);
+            ew1Div.appendChild(img);
 			
 			<!-- //var el = document.createElement('html'); -->
 			<!-- //e.innerHTML = result -->
@@ -1131,7 +1133,7 @@ var display = (async function(){
 	
 	var newDiv = document.createElement('div');
 	newDiv.id = 's'+i + j;
-	ewDiv.appendChild(newDiv);
+	ew1Div.appendChild(newDiv);
 	
 	document.getElementById("s" + i + j).innerHTML = name //"NFT Token ID1: " + tokenID;
 	//document.getElementById("contract_token_id").innerHTML = tokenID;
@@ -1149,11 +1151,11 @@ var display = (async function(){
 	
 	var newDiv = document.createElement('div');
 	newDiv.id = 'ss'+i;
-	chat.appendChild(newDiv);
+	ewDiv.appendChild(newDiv);
 	document.getElementById("ss" + i).outerHTML = '<center> trade &#8645; trade</center>'
-	var ewDiv = document.createElement('table');
+	var ew1Div = document.createElement('table');
 	
-	chat.appendChild(ewDiv);
+	ewDiv.appendChild(ew1Div);
 	for (j=0;j<contract_length1;j++){ 
 	
 	var contract_ID2 = await contract_bal.methods.token_contracts_list2xy(i, address, j).call();
@@ -1168,7 +1170,7 @@ var display = (async function(){
 	
 	
 	newDiv.id = 't'+i + j;
-	ewDiv.appendChild(newDiv);
+	ew1Div.appendChild(newDiv);
 	//chat.appendChild(newBtn);
 	
 	
@@ -1183,7 +1185,7 @@ var display = (async function(){
 	//console.log(obligation)
 	var newDiv = document.createElement('div');
 	newDiv.id = 'v'+i + j;
-	ewDiv.appendChild(newDiv);
+	ew1Div.appendChild(newDiv);
 	
 	
 	
@@ -1207,7 +1209,7 @@ var display = (async function(){
 			 image_ = 'https://ipfs.io/ipfs/' + JSONresult.image.slice(7)
 			}
             img.src = image_
-            ewDiv.appendChild(img);
+            ew1Div.appendChild(img);
 			
 	}
 	
@@ -1220,14 +1222,16 @@ var display = (async function(){
 	//var lender = await contract_bal.methods.lender_list(address).call();
 	//console.log(lender)
 	}
+	
 	var latest = await contract_bal.methods.debt_obligation_listx(i, address).call();
 	var newDiv = document.createElement('div');
 	newDiv.id = 'w'+i;
-	ewDiv.appendChild(newDiv);
+	ew1Div.appendChild(newDiv);
 	
 	document.getElementById("w" + i).innerHTML = "swap completed: " + latest;
 	//document.getElementById("latest_block").innerHTML = latest;
 	console.log(latest)
+	
 	var _i = (i)
 	var newBtn = document.createElement('input');
 	newBtn.setAttribute('type', 'button');
@@ -1240,7 +1244,9 @@ var display = (async function(){
 	newBtn.id = 'a' + i;
 	
 	
-	ewDiv.appendChild(newBtn);
+	ew1Div.appendChild(newBtn);
+	
+	
 	}
 	
 	
