--- a/create_nft_swap_form_polygonx_live.html
+++ b/create_nft_swap_form_polygonx_live.html
@@ -173,7 +173,7 @@ display: block;
 //var pwd = document.getElementById("password").value;
 
 function open_window() {
-  var myWindow = window.open("create_nft_swapx_polygon_add_live.html", "add to trade", "width=600,height=800");
+  var myWindow = window.open("create_nft_swapx_polygon_add_live.html", "add to trade");
 }               
 
 
