--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -102,7 +102,7 @@ font-size: large;
 
 
 function open_window() {
-  var myWindow = window.open("create_nft_swap_form_polygonx_live.html", "offer trade", "width=700,height=800");
+  var myWindow = window.open("create_nft_swap_form_polygonx_live.html", "offer trade");
 }             
 
 
