--- a/create_nft_swapx_polygon_add_live.html
+++ b/create_nft_swapx_polygon_add_live.html
@@ -146,6 +146,7 @@ display: block;
 <center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; margin-top:120px;">trade</center>
 <center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;">your NFT</center>
 
+<input type="text" class="their-nft" id="NFT_contract2" name="offer_no" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:145; right:790">offer no:</label>
 <input type="text" class="your-nft" id="NFT_contract1" name="NFT_contract1" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:185; right:790;">NFT contract address 1</label>	
 <input type="text" class="your-nft1" id="NFT_Token_ID1" name="NFT_Token_ID1" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:220; right:790;">NFT contract token ID 1</label>		
 
@@ -153,6 +154,7 @@ display: block;
 
 <center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;">for</center>
 <center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;">their NFT</center>
+<input type="text" class="their-nft" id="NFT_contract2" name="offer_no" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:390; right:790">offer no:</label>
 <input type="text" class="their-nft" id="NFT_contract2" name="NFT_contract2" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:420; right:790">NFT contract address 2</label>
 <input type="text" class="their-nft1" id="NFT_Token_ID2" name="NFT_Token_ID2" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:450; right:790">NFT contract token ID 2</label>
 
