--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1082,7 +1082,7 @@ var display = (async function(){
 	newDiv.id = 'rs'+i + j;
 	//newDiv.setAttribute('width', '15%');
 	//newDiv.setAttribute('height', '15%');
-	//newDiv.loading = "lazy";
+	newDiv.loading = "lazy";
 	//newDiv.onload = await "(image_and_name(" + contract_ID1 + ", " + tokenID + ", getImage))"
 	//newDiv.addEventListener("load", "(image_and_name(" + contract_ID1 + ", " + tokenID + ", getImage))");
 	//chat.appendChild(newDiv);
@@ -1189,7 +1189,7 @@ var display = (async function(){
 	//console.log(image);
 	var newDiv = document.createElement('img');
 	newDiv.id = 'vs'+i + j;
-	
+	newDiv.loading = "lazy";
 	//chat.appendChild(newDiv);
 	function getImage(xhttp){
 			var result = xhttp.response;
