--- a/create_nft_swapx_polygon_add_live.html
+++ b/create_nft_swapx_polygon_add_live.html
@@ -54,6 +54,28 @@ p {
   
 }
 
+input.offer_no {
+display: block;
+  
+  border-radius: 5px;
+  margin-top:5px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 400px
+  height:15px
+}
+
+input.offer_no2 {
+display: block;
+  
+  border-radius: 5px;
+  margin-top:5px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 400px
+  height:15px
+}
+
 input.your-nft {
 display: block;
   
