--- a/create_nft_swapx_polygon_add_live.html
+++ b/create_nft_swapx_polygon_add_live.html
@@ -147,7 +147,7 @@ display: block;
 
 
 
-<center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;">your NFT</center>
+<center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; top:150;">your NFT</center>
 
 <input type="text" class="offer_no" id="offer_no" name="offer_no" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:175; right:790">offer no:</label>
 <input type="text" class="your-nft" id="NFT_contract1" name="NFT_contract1" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:215; right:790;">NFT contract address 1</label>	
